add api fetch for word definition

--- a/lib/public/index.html
+++ b/lib/public/index.html
@@ -14,11 +14,7 @@
 
     <label>
       Word:
-      <input type="text" name="word" />
-    </label>
-    <label>
-      Definition:
-      <input type="text" name="definition" />
+      <input type="text" name="word" required />
     </label>
 
     <button>Add Word</button>
